fix bug with visited links not having click effect on mobile

--- a/style.css
+++ b/style.css
@@ -160,7 +160,7 @@ a:hover:visited {
 		color: var(--red);
 	}
 
-	a:active:visited, a:active:visited:after {
+	a:visited:active, a:visited:active:after {
 		color: var(--dark-red);
 	}
 }
